<resources>
    <string name="app_name">Challenge ME</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoibWFobW91ZDdlbGxhd2F0dHkiLCJhIjoiY2pzeW1jOTJ3MGRycTQzcXRjNHEycnExNyJ9.enxRekCKYRpiy_bpVTEl8Q</string>

    <string name="next_event">NEXT EVENT </string>
    <string name="explore_events">Explore Events</string>
    <string name="challenge_categories">Challenge Categories</string>
    <string name="event_proximity">Event Proximity</string>
    <string name="event_schedule">Event Schedule</string>
    <string name="cancle">Cancle</string>
    <string name="cross_fit">Cross Fit</string>
    <string name="_00_00_2024">00/00/2024</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_5_kilos">5 Kilos</string>
    <string name="action_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_username">Name</string>
    <string name="register">Register</string>
</resources>